@@ -33,8 +33,6 @@ class FieldRegistry:
         self._fields[field_class.meta_type] = field_class
         # set up dummy fields in field's form
         initializeFieldForm(field_class)
-        # set up dummy fields in field's subform (if any)
-        initializeSubFieldForm(field_class)
         # set up the icon if a filename is supplied
         if icon:
             setupIcon(field_class, icon, 'Formulator')
@@ -73,7 +71,6 @@ class FieldRegistry:
         for field_class in self._fields.values():
             field_class.form._realize_fields()
             field_class.override_form._realize_fields()
-            field_class.sub_form._realize_fields()
             
 # initialize registry as a singleton
 FieldRegistry = FieldRegistry()
@@ -107,16 +104,7 @@ def initializeFieldForm(field_class):
         
     field_class.form = form         
     field_class.override_form = override_form
-    
-def initializeSubFieldForm(field_class):
-    """Initialize any component fields that this field posseses.
-    """
-    from Form import BasicForm
-    sub_form = BasicForm()
-    for field_name in field_class.sub_field_names:
-        sub_form.add_field(getattr(field_class, field_name))
-    field_class.sub_form = sub_form
-    
+        
 def getPropertyFields(obj):
     """Get property fields from a particular widget/validator.
     """
