@@ -34,7 +34,7 @@ Edit <dtml-var meta_type> method overrides here.
     <dtml-var "field.render(value)">
     </td>
     <td><div class="form-element">
-    <dtml-var "field.meta_type">
+    <dtml-var "current_field.form.get_field(field.id).meta_type">
     </div></td>
   </tr>
 </dtml-let>
